<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-sound-sandbox</artifactId>
  <version>1.0.11</version>

  <name>Vavi Sound API (Sandbox)</name>
  <url>https://github.com/umjammer/vavi-sound-sandbox</url>
  <description/>
  <scm>
    <url>https://github.com/umjammer/vavi-sound-sandbox</url>
  </scm>
  <issueManagement>
    <url>https://github.com/umjammer/vavi-sound-sandbox/issues</url>
  </issueManagement>

  <properties>
    <tritonus.groupId>com.github.umjammer.tritonus</tritonus.groupId> <!-- org.tritonus / com.github.umjammer.tritonus -->
    <tritonus.version>0.3.17</tritonus.version>
    <maven.plugin.validation>VERBOSE</maven.plugin.validation>
    <vavi.test.volume>0.02</vavi.test.volume>
    <vavi.test.volume.midi>0.2</vavi.test.volume.midi>
    <maven.test.skip>false</maven.test.skip>
  </properties>

  <profiles>
    <profile>
      <id>local</id>
      <activation>
        <file>
          <exists>${basedir}/local.properties</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.2.1</version>
            <executions>
              <execution>
                <id>read-properties</id>
                <phase>initialize</phase>
                <goals>
                  <goal>read-project-properties</goal>
                </goals>
                <configuration>
                  <files>
                    <file>${basedir}/local.properties</file>
                  </files>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>uml</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>plantuml-generator-maven-plugin</artifactId>
            <groupId>de.elnarion.maven</groupId>
            <version>1.1.2</version>
            <executions>
              <execution>
                <id>generate-simple-diagram</id>
                <goals>
                  <goal>generate</goal>
                </goals>
                <!--
                            <phase>generate-test-sources</phase>
                -->
                <configuration>
                  <outputFilename>javax-sound-diagram.txt</outputFilename>
                  <scanPackages>
                    <scanPackage>
                    </scanPackage>
                  </scanPackages>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>local (not on ci)</id>
      <activation>
        <property>
          <name>!env.GITHUB_WORKFLOW</name>
        </property>
      </activation>
      <properties>
        <javaVersion>21</javaVersion>
      </properties>
      <pluginRepositories>
        <pluginRepository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
        </pluginRepository>
      </pluginRepositories>
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.umjammer</groupId>
            <artifactId>careless-maven-plugin</artifactId>
            <version>0.0.2</version>
            <executions>
              <execution>
                <phase>validate</phase>
                <goals>
                  <goal>careless</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <targets>
                <target>
                  <path>.github/workflows/codeql-analysis.yml</path>
                  <ri>jobs.analyze.steps[2].name</ri>
                  <value>Set up JDK ${javaVersion}</value>
                </target>
                <target>
                  <path>.github/workflows/codeql-analysis.yml</path>
                  <ri>jobs.analyze.steps[2].with.java-version</ri>
                  <value>${javaVersion}</value>
                </target>
                <target>
                  <path>.github/workflows/maven.yml</path>
                  <ri>jobs.build.steps[2].name</ri>
                  <value>Set up JDK ${javaVersion}</value>
                </target>
                <target>
                  <path>.github/workflows/maven.yml</path>
                  <ri>jobs.build.steps[2].with.java-version</ri>
                  <value>${javaVersion}</value>
                </target>
                <target>
                  <path>pom.xml</path>
                  <ri>//*[local-name()='artifactId' and text()='maven-compiler-plugin']/..//*[local-name()='release' or local-name()='source']/text()</ri>
                  <value>${javaVersion}</value>
                </target>
                <target>
                  <path>jitpack.yml</path>
                  <ri>jdk[0]</ri>
                  <value>openjdk${javaVersion}</value>
                </target>
                <target>
                  <path>README.md</path>
                  <ri>img\.shields\.io\/badge\/Java-(\d+?)-b07219</ri>
                  <value>${javaVersion}</value>
                </target>
                <target>
                  <path>pom.xml</path>
                  <ri>//*[local-name()='project']/*[local-name()='version']/text()</ri>
                  <value>.*-SNAPSHOT</value>
                  <negative>true</negative>
                </target>
              </targets>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>21</source> <!-- TODO release causes compilation failure why? -->
          <target>21</target>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
          </compilerArgs>
          <!-- https://stackoverflow.com/a/30472473 -->
          <fork>true</fork>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>generate-test-sources</id>
            <phase>generate-test-sources</phase>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/samples/java</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>generate-test-resources</id>
            <phase>generate-test-resources</phase>
            <goals>
              <goal>add-test-resource</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>src/samples/resources</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <argLine>
            -Xmx4G
            --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
            --add-opens java.base/java.io=ALL-UNNAMED
            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
            -javaagent:${project.build.directory}/vavi-instrumentation.jar
            -Dvavix.lang.instrumentation.VaviInstrumentation.1=vavix.lang.instrumentation.PropertiesClassFileTransformer
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
            -Dvavi.test.volume=@{vavi.test.volume}
            -Dvavi.test.volume.midi=@{vavi.test.volume.midi}
            -Dvavi.test.version=${project.version}
          </argLine>
          <trimStackTrace>false</trimStackTrace>
          <reuseForks>false</reuseForks>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>IntegrationTest</id>
            <goals>
              <goal>run</goal>
            </goals>
            <phase>integration-test</phase>
            <configuration>
              <skip>${maven.test.skip}</skip>
              <target>
                <java classname="IntegrationTest" fork="true">
                  <classpath>
                    <path location="${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}"/>
                    <path refid="maven.compile.classpath"/>
                    <path refid="maven.test.classpath"/>
                  </classpath>
                  <jvmarg value="-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties" />
                </java>
              </target>
              <failOnError>true</failOnError>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>generate-test-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>com.github.umjammer.vavi-commons</groupId>
                  <artifactId>vavi-instrumentation</artifactId>
                  <type>jar</type>
                  <overWrite>false</overWrite>
                  <outputDirectory>${project.build.directory}</outputDirectory>
                  <destFileName>vavi-instrumentation.jar</destFileName>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.14.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.16</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound</artifactId>
      <version>1.0.22</version>
      <exclusions>
        <exclusion>
          <groupId>com.github.umjammer</groupId>
          <artifactId>vavi-sound-nda</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer.rococoa</groupId> <!-- org.rococoa / com.github.umjammer.rococoa -->
      <artifactId>rococoa-cocoa</artifactId>
      <version>0.8.15</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.rococoa</groupId> <!-- org.rococoa / com.github.umjammer.rococoa -->
      <artifactId>rococoa-contrib</artifactId>
      <version>0.8.15</version>
    </dependency>
    <dependency>
      <groupId>${tritonus.groupId}</groupId>
      <artifactId>tritonus-remaining</artifactId>
      <version>${tritonus.version}</version>
    </dependency>
    <dependency>
      <groupId>com.github.lostromb</groupId>
      <artifactId>concentus</artifactId>
      <version>acaadf2075</version>
      <type>pom</type>
    </dependency>

    <dependency>
      <groupId>javax.media</groupId>
      <artifactId>jmf</artifactId>
      <version>2.1.1e</version>
    </dependency>

    <dependency>
      <groupId>com.github.philburk</groupId>
      <artifactId>jsyn</artifactId>
      <version>v16.8.1</version>
    </dependency>
<!--
    <dependency>
      <groupId>com.moandjiezana.toml</groupId>
      <artifactId>toml4j</artifactId>
      <version>0.7.2</version>
    </dependency>
-->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>urbanophile</groupId>
      <artifactId>java-getopt</artifactId>
      <version>1.0.9</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
      <artifactId>vavi-commons-sandbox</artifactId>
      <version>0.4.7</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${tritonus.groupId}</groupId>
      <artifactId>tritonus-dsp</artifactId>
      <version>${tritonus.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${tritonus.groupId}</groupId>
      <artifactId>tritonus-cdda</artifactId>
      <version>${tritonus.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${tritonus.groupId}</groupId>
      <artifactId>tritonus-jorbis</artifactId>
      <version>${tritonus.version}</version>
      <scope>test</scope>
    </dependency>

<!--
    <dependency>
      <groupId>org.jflac</groupId>
      <artifactId>jflac-codec</artifactId>
      <version>1.5.2</version>
      <scope>test</scope>
    </dependency>
 -->
    <dependency>
      <groupId>com.github.SourceUtils</groupId>
      <artifactId>jspeex</artifactId>
      <version>b7f6f864f0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- drogatkin / com.github.umjammer -->
      <artifactId>vavi-sound-flac</artifactId>
      <version>0.0.7</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- net.sourceforge.jaadec / com.github.umjammer -->
      <artifactId>vavi-sound-aac</artifactId>
      <version>0.8.12</version>
      <scope>test</scope>
    </dependency>
<!--
 -->
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- net.javazoom / com.github.umjammer -->
      <artifactId>mp3spi</artifactId>
      <version>1.9.16</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.mina-berger</groupId>
      <artifactId>mocha-sound</artifactId>
      <version>03201e40a6</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.16</version>
      <scope>test</scope>
    </dependency>
<!--
    <dependency>
      <groupId>uk.co.xfactory-librarians</groupId>
      <artifactId>coremidi4j</artifactId>
      <version>1.4</version>
      <scope>test</scope>
    </dependency>
-->
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.locurasoft / com.github.umjammer -->
      <artifactId>osxmidi4j</artifactId>
      <version>1.0.7</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>net.beadsproject</groupId>
      <artifactId>beads</artifactId>
      <version>3.2</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>net.java.dev.jna</groupId>
          <artifactId>jna</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.googlecode.soundlibs</groupId>
          <artifactId>mp3spi</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.clojars.automata</groupId>
          <artifactId>tritonus-aos</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.clojars.automata</groupId>
          <artifactId>tritonus-share</artifactId>
        </exclusion>
        <exclusion>
          <groupId>javazoom</groupId>
          <artifactId>jlayer</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
      <artifactId>vavi-util-screenscraping</artifactId>
      <version>1.0.18</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>com.github.umjammer</groupId>
          <artifactId>ACD-JAPI</artifactId>
        </exclusion>
        <exclusion>
          <artifactId>rococoa-contrib</artifactId>
          <groupId>com.github.umjammer.rococoa</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-sound-alac</artifactId>
      <version>0.3.5</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${tritonus.groupId}</groupId>
      <artifactId>tritonus-pvorbis</artifactId>
      <version>${tritonus.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer.vavi-commons</groupId>
      <artifactId>vavi-instrumentation</artifactId>
      <version>1.1.16</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
